<resources>
    <string name="app_name">Usmeshka_Groovy</string>
    <string name="video">Видео</string>
    <string name="home">Главная</string>
    <string name="goals">Цели</string>
    <string name="profile">Профиль</string>
    <string name="my_name_is">Меня зовут Стомик \n Давай чистить зубки вместе!</string>
    <string name="settings">Настройки</string>
    <string name="account">Аккаунт</string>
    <string name="bind_account">Привязать аккаунт</string>
    <string name="switch_account">Переключить аккаунт</string>
    <string name="russian">Русский</string>
    <string name="english">English</string>
    <string name="start">Старт</string>
    <string name="hello">Привет!</string>
    <string name="personal_account">Личный кабинет</string>
    <string name="stop">Стоп</string>
    <string name="videos">Видеоролики</string>
    <string name="next_notify">Следующий раз:</string>
    <string name="next">Далее</string>
    <string name="enter_your_email">Введите ваш email</string>
    <string name="enter_your_pass">Введите ваш пароль</string>
    <string name="email_for_notifications">Введите ваш email и пароль</string>
    <string name="registration">Регистрация</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="asking_about_notifs">Хотели бы вы получать уведомления о режиме чистки зубов вашего ребенка,о новых обновлениях?</string>
    <string name="second_name">Фимилия</string>
    <string name="name">Имя</string>
    <string name="enter_name_surname">Введите имя и фамилию ребёнка</string>
    <string name="parent">Родитель</string>
    <string name="child">Ребёнок</string>
    <string name="who_will_use_app">Кто будет использовать придложение?</string>
    <string name="users_data">Данные о пользователе</string>
    <string name="finished">Завершено</string>
    <string name="_20">20%</string>
    <string name="new_notification">Новое напоминание</string>
    <string name="name_of_notification">Название</string>
    <string name="notification_place">Место</string>
    <string name="date">Дата</string>
    <string name="time">Время</string>
    <string name="add_notification">+ Добавить напоминание</string>
    <string name="articles">Статьи</string>
    <string name="article_name">Название статьи</string>
    <string name="you_clean_teeth">Ты чистишь зубы</string>
    <string name="you_get">Ты заработал за этот период</string>
    <string name="appointmentToTheDoctor">Записаться к врачу</string>
    <string name="dentists_near">Cтоматологии рядом</string>
    <string name="sales">Скидки от партнёров</string>
    <string name="news">Новости</string>
    <string name="_19_05_2024">19.05.2024</string>
    <string name="greeting">Рады вас видеть в нашем приложении, дорогой пользователь!</string>
    <string name="authorisation">Авторизация</string>
    <string name="loading">Загрузка...</string>
    <string name="enter_login_password">Пожалуйста, введите логин и пароль</string>
    <string name="login">Логин (e-mail)</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти</string>
    <string name="synk_key">Синхронизационный ключ</string>
    <string name="bind_acc">Привязать аккаунт</string>
    <string name="copy">Копировать код</string>

    <string-array name="array_for_spinner">
        <item>Повторять каждый день</item>
        <item>Повторять раз в неделю</item>
        <item>Повторять каждые 2 недели</item>
        <item>Повторять каждые 3 недели</item>
        <item>Повторять раз месяц</item>
        <item>Повторять раз в 3 месяца</item>
        <item>Повторять каждые полгода</item>
        <item>Повторять каждый год</item>
    </string-array>


    <string name="main">Главная</string>
    <string name="add_to_cart">В корзину</string>
    <string name="card">cart</string>
    <string name="products">Товары</string>
    <string name="mines">-</string>
    <string name="plus">+</string>
    <string name="cart">Корзина</string>
    <string name="error">Ошибка</string>
    <string name="error_no_internet">Нет соединения с интернетом</string>

    <string name="percent">0%</string>
    <string name="auth">Авторизоваться</string>
    <string name="fathers_name">Отчество</string>
    <string name="enter_all_personal_info">Пожалуйста, введите ФИО пользователя</string>
    <string name="finish">Завершить</string>
    <string name="patronymic">Отчество</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="in_stock">В наличии:</string>
    <string name="buy">Купить</string>

    <string name="history">История покупок</string>
    <string name="clean_history">Очистить историю</string>
    <string name="back">Back</string>
    <string name="was_bought">Покупка была совершена:</string>
    <string name="purchase">Покупка</string>
    <string name="close">Закрыть</string>
    <string name="purchase_sum">Сумма покупки</string>
    <string name="purchase_date">Дата покупки</string>
    <string name="purchase_done">Покупка была совершена</string>
    <string name="info">Инфо</string>
    <string name="analythics">Аналитика</string>
    <string name="important">Важное</string>
    <string name="shop">Магазин</string>

</resources>