<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registration_all"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_for_background"
    android:orientation="vertical"
    tools:ignore="InvalidId">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />

    <TextView
        android:id="@+id/percent_completed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="86dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/_20"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.15" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/finished"
        android:textColor="@color/white_opacity50"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/percent_completed"
        app:layout_constraintStart_toEndOf="@id/percent_completed"
        app:layout_constraintTop_toTopOf="@id/percent_completed"
        app:layout_constraintWidth_percent="0.4" />

    <TextView
        android:id="@+id/user_data_or_sink_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/users_data"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/percent_completed" />

    <ImageView
        android:id="@+id/mark1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="9dp"
        android:contentDescription="@string/_20"
        android:src="@drawable/_visible1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_data_or_sink_text" />

    <ImageView
        android:id="@+id/mark2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="48dp"
        android:src="@drawable/_visible2"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_data_or_sink_text" />

    <ImageView
        android:id="@+id/mark3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="48dp"
        android:src="@drawable/_visible3"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_data_or_sink_text" />

    <ImageView
        android:id="@+id/mark4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="48dp"
        android:src="@drawable/_visible4"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_data_or_sink_text" />

    <LinearLayout
        android:id="@+id/reg_who_use"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="260dp"
        android:background="@drawable/bottomsheet_bg"
        android:orientation="vertical"
        android:visibility="visible"
        app:behavior_hideable="false"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_data_or_sink_text">

        <TextView
            android:id="@+id/registration_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/registration"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/who_use"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/who_will_use_app"
            android:textColor="@color/dark_grey_opacity60"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/who_use_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_pirates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/child"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radio_ninjas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/parent"
                android:textSize="20sp" />
        </RadioGroup>

        <Button
            android:id="@+id/next_btn_20"
            style="@style/ButtonBlueText16White"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <Button
            android:id="@+id/reg_btn"
            style="@style/ButtonSecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_medium"
            android:paddingVertical="10dp"
            android:text="@string/authorisation"
            android:textAllCaps="false"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/reg_name_surname"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="260dp"
        android:background="@drawable/bottomsheet_bg"
        android:orientation="vertical"
        android:visibility="gone"
        app:behavior_hideable="false"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_data_or_sink_text">

        <TextView
            android:id="@+id/registration_40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/registration"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/enter_name_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/enter_name_surname"
            android:textColor="@color/dark_grey_opacity60"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/name"
            style="@style/EdittextStyleWithDiscription"
            android:layout_marginTop="45dp"
            android:autofillHints=""
            android:hint="@string/name"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/surname"
            style="@style/EdittextStyleWithDiscription"
            android:layout_marginTop="12dp"
            android:autofillHints=""
            android:hint="@string/second_name"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/next_btn_40"
            style="@style/ButtonBlueText16White"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textSize="16sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/reg_notify_yes_no"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="260dp"
        android:background="@drawable/bottomsheet_bg"
        android:orientation="vertical"
        android:visibility="gone"
        app:behavior_hideable="false"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_data_or_sink_text">

        <TextView
            android:id="@+id/registration_60"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/registration"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/asking_about_notifs"
            android:textColor="@color/dark_grey_opacity60"
            android:textSize="16dp" />


        <RadioGroup
            android:id="@+id/notificatoins_agreement_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/yes"
                android:textSize="20dp" />

            <RadioButton
                android:id="@+id/radio_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/no"
                android:textSize="20dp" />
        </RadioGroup>

        <Button
            android:id="@+id/next_btn_60"
            style="@style/ButtonBlueText16White"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/reg_email"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="260dp"
        android:background="@drawable/bottomsheet_bg"
        android:orientation="vertical"
        android:visibility="gone"
        app:behavior_hideable="false"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_data_or_sink_text">

        <TextView
            android:id="@+id/registration_80"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/registration"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/enter_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/email_for_notifications"
            android:textColor="@color/dark_grey_opacity60"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/email_et"
            style="@style/EdittextStyleWithDiscription"
            android:layout_marginTop="12dp"
            android:autofillHints=""
            android:hint="@string/enter_your_email"
            tools:ignore="TextFields,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/password_et"
            style="@style/EdittextStyleWithDiscription"
            android:layout_marginTop="12dp"
            android:autofillHints=""
            android:inputType="textPassword"
            android:hint="@string/enter_your_pass"
            tools:ignore="TextFields,TouchTargetSizeCheck" />


        <Button
            android:id="@+id/next_btn_80"
            style="@style/ButtonBlueText16White"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textSize="16sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/reg_sink"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="260dp"
        android:background="@drawable/bottomsheet_bg"
        android:orientation="vertical"
        android:visibility="visible"
        app:behavior_hideable="false"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_data_or_sink_text">

        <TextView
            android:id="@+id/auth_text_for_synk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/bind_acc"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="parent" />



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/synk_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxStrokeColor="@color/gray"
            app:hintTextColor="@color/light_gray"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/synk_key"
                style="@style/EdittextStyleWithDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/synk_key"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/next_btn_100"
            style="@style/ButtonBlueText16White"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/enter"
            android:textAllCaps="false"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>