<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:contentInsetStartWithNavigation="0dp"
        android:titleTextAppearance="@style/style_for_toolbar"
        app:navigationIcon="@drawable/chevron_left"
        app:title="@string/settings" />

    <LinearLayout
        android:id="@+id/russian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/SettingsButtonsStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/russian" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingEnd="34dp"
            android:src="@drawable/choise_indicator" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/english"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/SettingsButtonsStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/english" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingEnd="34dp"
            android:src="@drawable/choise_indicator"
            android:visibility="gone"/>
    </LinearLayout>

</LinearLayout>