<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/show_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:padding="20dp">


    <TextView
        android:id="@+id/new_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/new_notification"
        android:textColor="@color/dark_blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/new_notification_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/name_of_notification"
        android:paddingVertical="16dp"
        android:paddingHorizontal="4dp"
        android:textColor="@color/blue_top"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_notification" />


    <TextView
        android:id="@+id/new_notification_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/underline"
        android:clickable="true"
        android:fontFamily="@font/roboto_regular"
        android:hint="Дата и время"
        android:paddingHorizontal="4dp"
        android:paddingVertical="16dp"
        android:textColor="@color/blue_top"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_notification_name" />


    <Spinner
        android:id="@+id/notification_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/time"
        android:paddingVertical="16dp"
        android:textColor="@color/blue_top"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_notification_date" />

    <Button
        android:id="@+id/add_notification_button"
        style="@style/ButtonAddNotification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="18dp"
        android:text="@string/add_notification"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notification_spinner" />
</androidx.constraintlayout.widget.ConstraintLayout>